Ajout ligne par Etudiant 1

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
     <h1>Bienvenue sur CollabSite</h1>
     <p>Page d'accueil du projet.</p>
+    <p>Etudiant 1 a ajouté cette ligne.</p>
 </body>
 </html>
