Modification locale sur index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
     <h1>Bienvenue sur CollabSite</h1>
     <p>Page d'accueil du projet.</p>
+    <p>Welcme to our main page</p>
 </body>
 </html>
